--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Scooter</title>
+    <!-- ................fav_icon............  -->
+    <link rel="icon" href="./images/favIcon.png" />
+
     <!-- ........... Bootstrap link........... -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
@@ -15,6 +18,45 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg main_nav">
+      <div class="container">
+        <a class="navbar-brand logo_img" href="#"
+          ><img src="./images/logo.png" alt="logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse nav_menus"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+          </ul>
+          <div class="menu_buttons">
+            <a class="sign_in" href="#">sign in</a>
+            <a class="sign_up" href="#">sign up</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <!-- ............... script part start.......... -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
