--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>E-Scooter</title>
     <!-- ................fav_icon............  -->
     <link rel="icon" href="./images/favIcon.png" />
+    <!--..... aos.......  -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- ........... Bootstrap link........... -->
     <link
@@ -65,39 +67,183 @@
     </nav>
     <section id="banner">
       <div class="container">
-        <div class="col-lg-12 banner_div">
-          <h1>Let's Ride <span>The Future.</span></h1>
-          <div class="borderBar"></div>
-          <p>Simple and sleek design with users in mind.</p>
-          <div class="banner_bottom_side">
-            <a href="#" class="button" style="--clr: #00ad54">
-              <span class="button-decor"></span>
-              <div class="button-content">
-                <div class="button__icon">
-                  <i class="fa-solid fa-arrow-right"></i>
+        <div class="row">
+          <div class="col-lg-12 banner_div">
+            <h1>Let's Ride <span>The Future.</span></h1>
+            <div class="borderBar"></div>
+            <p>Simple and sleek design with users in mind.</p>
+            <div class="banner_bottom_side">
+              <a href="#" class="button" style="--clr: #00ad54">
+                <span class="button-decor"></span>
+                <div class="button-content">
+                  <div class="button__icon">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </div>
+                  <span class="button__text">Buy Now</span>
                 </div>
-                <span class="button__text">Buy Now</span>
-              </div>
-            </a>
+              </a>
 
-            <div class="watch_videos">
-              <div class="left">Watch our video how it works</div>
-              <div class="right">
-                <img src="./images/play button.png" alt="works" />
+              <div class="watch_videos">
+                <div class="left">Watch our video how it works</div>
+                <div class="right">
+                  <img src="./images/play button.png" alt="works" />
+                </div>
+                <div class="play_mid_button">
+                  <img src="./images/Vector 232.png" alt="play" />
+                </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-aos="zoom-out-right" class="banner_image">
+        <img src="./images/banner_image.png" alt="banerBG" />
+      </div>
+    </section>
+    <!-- ...............counter part start..........  -->
+    <section id="counter">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="200"
+              data-aos="zoom-in-left"
+              class="counter_single_box"
+            >
+              <h3><span class="counter">105</span>lbs</h3>
+              <p>Net Weight</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="600"
+              data-aos="zoom-in-left"
+              class="counter_single_box"
+            >
+              <h3><span class="counter">26</span>mph</h3>
+              <p>Top Speed</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="1000"
+              data-aos="zoom-in-left"
+              class="counter_single_box"
+            >
+              <h3><span class="counter">38</span>miles</h3>
+              <p>Top Range</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="1500"
+              data-aos="zoom-in-left"
+              class="counter_single_box"
+            >
+              <h3><span class="counter">89</span>nm</h3>
+              <p>Max Torques</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="2000"
+              data-aos="zoom-in-left"
+              class="counter_single_box"
+            >
+              <h3>
+                <span class="last_two"><span class="counter">22</span>%</span
+                >slope
+              </h3>
+              <p>Hill Climbing</p>
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div
+              data-aos-duration="2500"
+              data-aos="zoom-in-left"
+              class="last_box"
+            >
+              <h3>
+                <span class="last_two"><span class="counter">2</span>X</span>
+              </h3>
+              <p>Hydralic Disc Brakes</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- .......... Product_Information start ............  -->
+    <section id="Product_Information">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="head">
+              <h2>Product Information</h2>
+              <p>
+                Our Scooter has following unique design and technology features:
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 bike_img_div">
+            <div class="bike_img">
+              <img src="./images/image.png" alt="bike" />
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="discription">
+              <img src="./images/features.png" alt="about_bike" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- .......... Product_Information end ............  -->
+    <!-- ..............Efficiency part start.........  -->
+    <section id="Efficiency">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="Efficiency_head">
+              <h2>High Efficiency Motor</h2>
+              <p>
+                More torque for powerful riding with 22% maximum hill climbing
+                capability.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="Efficiency_pic">
+              <img src="./images/Efficiency.png" alt="Efficiency_engine" />
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <!-- ..............Efficiency part end.........  -->
+    <!-- ...............counter part end..........  -->
+
     <!-- ............... script part start.......... -->
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+      crossorigin="anonymous"
+    ></script>
+    <!-- ........bootstrap........  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
-
+    <!-- ........aos........  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- ..........counter cdn.........  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="./js/jquery.counterup.min.js"></script>
     <script src="./js/script.js"></script>
     <!-- ............... script part end.......... -->
   </body>
