done till Efficiency

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
       </div>
     </nav>
+    <!-- ..........banner part start...........  -->
     <section id="banner">
       <div class="container">
         <div class="row">
@@ -100,6 +101,8 @@
         <img src="./images/banner_image.png" alt="banerBG" />
       </div>
     </section>
+    <!-- ..........banner part end...........  -->
+
     <!-- ...............counter part start..........  -->
     <section id="counter">
       <div class="container">
@@ -185,15 +188,52 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 bike_img_div">
+        <div class="row bikeInfoDiv">
+          <div class="col-lg-6">
             <div class="bike_img">
               <img src="./images/image.png" alt="bike" />
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="discription">
-              <img src="./images/features.png" alt="about_bike" />
+            <div class="right_side">
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">
+                  Lightweight aircraft grade aluminium frame
+                </h4>
+              </div>
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">Car grade lithium battery</h4>
+              </div>
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">Self-balanced</h4>
+              </div>
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">Plug n play</h4>
+              </div>
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">Quick release adapter</h4>
+              </div>
+              <div class="discription">
+                <div class="tik">
+                  <img src="./images/Icon.png" alt="tik_Icon" />
+                </div>
+                <h4 class="points">RFID key card</h4>
+              </div>
             </div>
           </div>
         </div>
@@ -225,6 +265,24 @@
     </section>
 
     <!-- ..............Efficiency part end.........  -->
+
+    <!-- ..............Accessories part start.........  -->
+    <section id="Accessories">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="head">
+              <h2>Multiple Accessories</h2>
+              <p>
+                There are multiple modes for the scooter for your multiple
+                needs.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ..............Accessories part end.........  -->
     <!-- ...............counter part end..........  -->
 
     <!-- ............... script part start.......... -->
