gallery part done. working on colors and testimonials

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+
+    <!-- ...............slick css...............  -->
+    <link rel="stylesheet" href="./css/slick.css" />
     <!-- ............custom css.........  -->
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -180,7 +183,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="head">
+            <div class="common_head">
               <h2>Product Information</h2>
               <p>
                 Our Scooter has following unique design and technology features:
@@ -245,7 +248,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="Efficiency_head">
+            <div class="common_head">
               <h2>High Efficiency Motor</h2>
               <p>
                 More torque for powerful riding with 22% maximum hill climbing
@@ -271,7 +274,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="head">
+            <div class="common_head">
               <h2>Multiple Accessories</h2>
               <p>
                 There are multiple modes for the scooter for your multiple
@@ -280,11 +283,291 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="Golf_bag_div">
+              <h2 class="Golf_bag_head">Golf Bag Rock</h2>
+              <div class="Golf_bag_details_div">
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="accessoriesImages">
+              <div class="imgOne">
+                <img src="./images/Acc_image.png" alt="bikeAccessories" />
+              </div>
+              <div class="imgTwo">
+                <img src="./images/image(1).png" alt="bikePartsOne" />
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-    <!-- ..............Accessories part end.........  -->
-    <!-- ...............counter part end..........  -->
 
+    <!-- ..............Accessories part end.........  -->
+    <!-- ...............Shopping Rack part start..........  -->
+    <section id="Shopping_Rack">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="Shopping_Rack_images">
+              <div class="imgOne">
+                <img
+                  src="./images/shoppingRackBg.png"
+                  alt="bikeShopping_Rack"
+                />
+              </div>
+              <div class="imgTwo">
+                <img src="./images/ShoppingRackTwo.png" alt="Shopping_Rack" />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="Golf_bag_div">
+              <h2 class="Golf_bag_head">Shopping Rack</h2>
+              <div class="Golf_bag_details_div">
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+                <div class="Golf_bag_details">
+                  <div class="tik">
+                    <img src="./images/Icon.png" alt="tik_Icon" />
+                  </div>
+                  <h4 class="points">Material : Aluminium alloy</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-12">
+            <a class="comming_soon"> More Accessories Coming Soon </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ...............Shopping Rack part end..........  -->
+
+    <!-- ...............Gallery part start..........  -->
+    <section id="Gallery">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Gallery</h2>
+              <p>
+                View gallery of our products and make yourself satisfied with
+                our creation.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="scooterImg">
+              <img src="./images/scooter.png" alt="scooter" />
+            </div>
+            <div class="scooterButtons">
+              <button class="gallary_buttons">Battery Images</button>
+
+              <button class="gallary_buttons">Spare Parts Images</button>
+
+              <button class="gallary_buttons">Charging Cable Images</button>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="build_qualityImg">
+              <img src="./images/buildQuality.png" alt="build-quality" />
+            </div>
+            <div class="scooter_partImg">
+              <img src="./images/scooterPart.png" alt="scooter_part" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ...............Gallery part end..........  -->
+
+    <!-- ...............Colors part start..........  -->
+    <section id="colors">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Colors</h2>
+              <p>Checkout our products colors.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="colorsDiv">
+              <div class="slider-for">
+                <div class="slider_for_pic">
+                  <img src="./images/singelSlideImage1.png" alt="SlideImage1" />
+                </div>
+                <div class="slider_for_pic">
+                  <img src="./images/singelSlideImage2.png" alt="SlideImage2" />
+                </div>
+                <div class="slider_for_pic">
+                  <img src="./images/singelSlideImage3.png" alt="SlideImage3" />
+                </div>
+                <div class="slider_for_pic">
+                  <img src="./images/singelSlideImage4.png" alt="SlideImage4" />
+                </div>
+              </div>
+              <div class="slider-nav sliderNavOptions">
+                <div class="slider_nav_pic">
+                  <img src="./images/slidenavItem1.png" alt="slidenavItem1" />
+                </div>
+                <div class="slider_nav_pic">
+                  <img src="./images/slidenavItem2.png" alt="slidenavItem2" />
+                </div>
+                <div class="slider_nav_pic">
+                  <img src="./images/slidenavItem3.png" alt="slidenavItem3" />
+                </div>
+                <div class="slider_nav_pic">
+                  <img src="./images/slidenavItem4.png" alt="slidenavItem4" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ...............Colors part end..........  -->
+
+    <!-- ...............Testimonials part start..........  -->
+    <section id="Testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Testimonials</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="center">
+              <div class="Testimonials_card_img">
+                <div class="card_top">
+                  <div class="stars">
+                    <img src="./images/Shape.png" alt="starts" />
+                  </div>
+                  <p>
+                    On the other hand, we denounce with righteous indignation
+                    and dislike men who are so beguiled and demoralized by the
+                    charms of pleasure.
+                  </p>
+                </div>
+                <div class="cardBot">
+                  <div class="profilePic">
+                    <img src="./images/sliderp1.png" alt="" />
+                  </div>
+                  <div class="name">
+                    <h2>Serhiy Hipskyy</h2>
+                    <p>CEO Universal</p>
+                  </div>
+                </div>
+              </div>
+              <div class="Testimonials_card_img">
+                <div class="card_top">
+                  <div class="stars">
+                    <img src="./images/Shape.png" alt="starts" />
+                  </div>
+                  <p>
+                    On the other hand, we denounce with righteous indignation
+                    and dislike men who are so beguiled and demoralized by the
+                    charms of pleasure.
+                  </p>
+                </div>
+                <div class="cardBot">
+                  <div class="profilePic">
+                    <img src="./images/sliderp2.png" alt="" />
+                  </div>
+                  <div class="name">
+                    <h2>Serhiy Hipskyy</h2>
+                    <p>CEO Universal</p>
+                  </div>
+                </div>
+              </div>
+              <div class="Testimonials_card_img">
+                <div class="card_top">
+                  <div class="stars">
+                    <img src="./images/Shape.png" alt="starts" />
+                  </div>
+                  <p>
+                    On the other hand, we denounce with righteous indignation
+                    and dislike men who are so beguiled and demoralized by the
+                    charms of pleasure.
+                  </p>
+                </div>
+                <div class="cardBot">
+                  <div class="profilePic">
+                    <img src="./images/sliderp3.png" alt="" />
+                  </div>
+                  <div class="name">
+                    <h2>Serhiy Hipskyy</h2>
+                    <p>CEO Universal</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ...............Testimonials part end..........  -->
+
+    <!-- ...............Subscribe part start............ -->
+    <section id="Subscribe">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12"></div>
+        </div>
+      </div>
+    </section>
+    <!-- ...............Subscribe part end............ -->
     <!-- ............... script part start.......... -->
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -297,6 +580,8 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+    <!-- ............slick............  -->
+    <script src="./js/slick.min.js"></script>
     <!-- ........aos........  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- ..........counter cdn.........  -->
