Footer section done.Need to do responsive

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
           </div>
         </div>
       </div>
-      <div data-aos="zoom-out-right" class="banner_image">
+      <div
+        data-aos-duration="1000"
+        data-aos="zoom-out-right"
+        class="banner_image"
+      >
         <img src="./images/banner_image.png" alt="banerBG" />
       </div>
     </section>
@@ -193,7 +197,7 @@
         </div>
         <div class="row bikeInfoDiv">
           <div class="col-lg-6">
-            <div class="bike_img">
+            <div data-aos-duration="1000" data-aos="zoom-in" class="bike_img">
               <img src="./images/image.png" alt="bike" />
             </div>
           </div>
@@ -259,7 +263,11 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <div class="Efficiency_pic">
+            <div
+              data-aos-duration="1700"
+              data-aos="flip-left"
+              class="Efficiency_pic"
+            >
               <img src="./images/Efficiency.png" alt="Efficiency_engine" />
             </div>
           </div>
@@ -317,11 +325,19 @@
           </div>
           <div class="col-lg-8">
             <div class="accessoriesImages">
-              <div class="imgOne">
+              <div
+                data-aos-duration="1700"
+                data-aos="zoom-in-down"
+                class="imgOne"
+              >
                 <img src="./images/Acc_image.png" alt="bikeAccessories" />
               </div>
-              <div class="imgTwo">
-                <img src="./images/image(1).png" alt="bikePartsOne" />
+              <div
+                data-aos-duration="1700"
+                data-aos="zoom-in-up"
+                class="imgTwo"
+              >
+                <img src="./images/image1.png" alt="bikePartsOne" />
               </div>
             </div>
           </div>
@@ -336,13 +352,21 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="Shopping_Rack_images">
-              <div class="imgOne">
+              <div
+                data-aos-duration="1700"
+                data-aos="zoom-in-up"
+                class="imgOne"
+              >
                 <img
                   src="./images/shoppingRackBg.png"
                   alt="bikeShopping_Rack"
                 />
               </div>
-              <div class="imgTwo">
+              <div
+                data-aos-duration="1700"
+                data-aos="zoom-in-down"
+                class="imgTwo"
+              >
                 <img src="./images/ShoppingRackTwo.png" alt="Shopping_Rack" />
               </div>
             </div>
@@ -402,7 +426,11 @@
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <div class="scooterImg">
+            <div
+              data-aos-duration="1700"
+              data-aos="zoom-in-right"
+              class="scooterImg"
+            >
               <img src="./images/scooter.png" alt="scooter" />
             </div>
             <div class="scooterButtons">
@@ -414,10 +442,18 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="build_qualityImg">
+            <div
+              data-aos-duration="1700"
+              data-aos="zoom-in-left"
+              class="build_qualityImg"
+            >
               <img src="./images/buildQuality.png" alt="build-quality" />
             </div>
-            <div class="scooter_partImg">
+            <div
+              data-aos-duration="1700"
+              data-aos="zoom-out-up"
+              class="scooter_partImg"
+            >
               <img src="./images/scooterPart.png" alt="scooter_part" />
             </div>
           </div>
@@ -454,18 +490,20 @@
                   <img src="./images/singelSlideImage4.png" alt="SlideImage4" />
                 </div>
               </div>
-              <div class="slider-nav sliderNavOptions">
-                <div class="slider_nav_pic">
-                  <img src="./images/slidenavItem1.png" alt="slidenavItem1" />
-                </div>
-                <div class="slider_nav_pic">
-                  <img src="./images/slidenavItem2.png" alt="slidenavItem2" />
-                </div>
-                <div class="slider_nav_pic">
-                  <img src="./images/slidenavItem3.png" alt="slidenavItem3" />
-                </div>
-                <div class="slider_nav_pic">
-                  <img src="./images/slidenavItem4.png" alt="slidenavItem4" />
+              <div>
+                <div class="slider-nav sliderNavOptions">
+                  <div class="slider_nav_pic">
+                    <img src="./images/slidenavItem1.png" alt="slidenavItem1" />
+                  </div>
+                  <div class="slider_nav_pic">
+                    <img src="./images/slidenavItem2.png" alt="slidenavItem2" />
+                  </div>
+                  <div class="slider_nav_pic">
+                    <img src="./images/slidenavItem3.png" alt="slidenavItem3" />
+                  </div>
+                  <div class="slider_nav_pic">
+                    <img src="./images/slidenavItem4.png" alt="slidenavItem4" />
+                  </div>
                 </div>
               </div>
             </div>
@@ -487,67 +525,132 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <div class="center">
-              <div class="Testimonials_card_img">
-                <div class="card_top">
-                  <div class="stars">
-                    <img src="./images/Shape.png" alt="starts" />
+            <div class="card_img_div">
+              <div class="center">
+                <div class="Testimonials_card_img">
+                  <div class="card_top">
+                    <div class="star_div">
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                    </div>
+                    <p>
+                      On the other hand, we denounce with righteous indignation
+                      and dislike men who are so beguiled and demoralized by the
+                      charms of pleasure.
+                    </p>
                   </div>
-                  <p>
-                    On the other hand, we denounce with righteous indignation
-                    and dislike men who are so beguiled and demoralized by the
-                    charms of pleasure.
-                  </p>
-                </div>
-                <div class="cardBot">
-                  <div class="profilePic">
-                    <img src="./images/sliderp1.png" alt="" />
-                  </div>
-                  <div class="name">
-                    <h2>Serhiy Hipskyy</h2>
-                    <p>CEO Universal</p>
-                  </div>
-                </div>
-              </div>
-              <div class="Testimonials_card_img">
-                <div class="card_top">
-                  <div class="stars">
-                    <img src="./images/Shape.png" alt="starts" />
-                  </div>
-                  <p>
-                    On the other hand, we denounce with righteous indignation
-                    and dislike men who are so beguiled and demoralized by the
-                    charms of pleasure.
-                  </p>
-                </div>
-                <div class="cardBot">
-                  <div class="profilePic">
-                    <img src="./images/sliderp2.png" alt="" />
-                  </div>
-                  <div class="name">
-                    <h2>Serhiy Hipskyy</h2>
-                    <p>CEO Universal</p>
+                  <div class="cardBot">
+                    <div class="profilePic">
+                      <img src="./images/sliderp1.png" alt="" />
+                    </div>
+                    <div class="name">
+                      <h2>Serhiy Hipskyy</h2>
+                      <p>CEO Universal</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="Testimonials_card_img">
-                <div class="card_top">
-                  <div class="stars">
-                    <img src="./images/Shape.png" alt="starts" />
+                <div class="Testimonials_card_img">
+                  <div class="card_top">
+                    <div class="star_div">
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                    </div>
+                    <p>
+                      Nam libero tempore, cum soluta nobis est eligendi optio
+                      cumque nihil impedit quo minus id quod maxime placeat
+                      facere possimus.
+                    </p>
                   </div>
-                  <p>
-                    On the other hand, we denounce with righteous indignation
-                    and dislike men who are so beguiled and demoralized by the
-                    charms of pleasure.
-                  </p>
+                  <div class="cardBot">
+                    <div class="profilePic">
+                      <img src="./images/sliderp2.png" alt="" />
+                    </div>
+                    <div class="name">
+                      <h2>Serhiy Hipskyy</h2>
+                      <p>CEO Universal</p>
+                    </div>
+                  </div>
                 </div>
-                <div class="cardBot">
-                  <div class="profilePic">
-                    <img src="./images/sliderp3.png" alt="" />
+                <div class="Testimonials_card_img">
+                  <div class="card_top">
+                    <div class="stars">
+                      <img src="./images/Shape.png" alt="starts" />
+                    </div>
+                    <p>
+                      On the other hand, we denounce with righteous indignation
+                      and dislike men who are so beguiled and demoralized by the
+                      charms of pleasure.
+                    </p>
                   </div>
-                  <div class="name">
-                    <h2>Serhiy Hipskyy</h2>
-                    <p>CEO Universal</p>
+                  <div class="cardBot">
+                    <div class="profilePic">
+                      <img src="./images/sliderp3.png" alt="" />
+                    </div>
+                    <div class="name">
+                      <h2>Serhiy Hipskyy</h2>
+                      <p>CEO Universal</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="Testimonials_card_img">
+                  <div class="card_top">
+                    <div class="star_div">
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                      <div class="star">
+                        <img src="./images/Star5.png" alt="star" />
+                      </div>
+                    </div>
+                    <p>
+                      At vero eos et accusamus et iusto odio dignissimos ducimus
+                      qui blanditiis praesentium voluptatum deleniti atque
+                      corrupti quos dolores.
+                    </p>
+                  </div>
+                  <div class="cardBot">
+                    <div class="profilePic">
+                      <img src="./images/sliderp3.png" alt="" />
+                    </div>
+                    <div class="name">
+                      <h2>Serhiy Hipskyy</h2>
+                      <p>CEO Universal</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -563,11 +666,83 @@
     <section id="Subscribe">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12"></div>
+          <div class="col-lg-12">
+            <div class="common_head">
+              <h2>Subscribe To Newsletter</h2>
+              <p>
+                Subscribe to our newsletter to get amazing offers in future.
+              </p>
+            </div>
+            <div class="subInputButton">
+              <input type="email" placeholder="Enter your email." />
+              <button>Get start</button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!-- ...............Subscribe part end............ -->
+
+    <!-- ...............Footer part start............ -->
+    <section id="footer">
+      <div class="container">
+        <div data-aos-duration="1700" data-aos="zoom-out" class="footer_bg">
+          <img src="./images/footerImage.png" alt="footer_img" />
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="footer_options_div">
+              <div class="aboutDiv">
+                <h2>About</h2>
+                <div class="about_bot_options">
+                  <p>Company</p>
+                  <p>Teams</p>
+                  <p>Profile</p>
+                  <p>Careers</p>
+                </div>
+              </div>
+              <div class="aboutDiv">
+                <h2>Resources</h2>
+                <div class="about_bot_options">
+                  <p>Contact</p>
+                  <p>Application</p>
+                  <p>FQA Features</p>
+                </div>
+              </div>
+              <div class="aboutDiv">
+                <h2>Legals</h2>
+                <div class="about_bot_options">
+                  <p>Copyright Privacy</p>
+                  <p>Policy Disclaimer</p>
+                  <p>Terms</p>
+                </div>
+                <div class="FootericonsDiv">
+                  <div class="social_icon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </div>
+                  <div class="social_icon">
+                    <i class="fa-brands fa-twitter"></i>
+                  </div>
+                  <div class="social_icon">
+                    <i class="fa-brands fa-instagram"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p class="copyRightMessage">
+              © Copyright 2021. All rights reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ...............Footer part end............ -->
+
     <!-- ............... script part start.......... -->
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -580,10 +755,13 @@
       integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
       crossorigin="anonymous"
     ></script>
+
     <!-- ............slick............  -->
     <script src="./js/slick.min.js"></script>
+
     <!-- ........aos........  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-- ..........counter cdn.........  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="./js/jquery.counterup.min.js"></script>
